# raphael

./: Readme.md  data_analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: data_analysis-checkpoint.ipynb
data/: plot.html  spotify_song_data.json  spotify_song_data_features.json  spotify_song_data_meta.json
raphael/: download_tracks_data.py  get_audio_features.py  get_track_data.py
tests/: test_raphael.py
