[tool.poetry]
name = "raphael"
version = "0.1.0"
description = ""
authors = ["us241098 <us241077@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.0"
plotly = "^5.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
